# PARI-inclinometro

./: CMakeLists.txt  README.md  apresentacao.odp  simplescan  testeBT.c
doc/: Doxyfile.in  mainpage.dox
prog_ardMod/: prog_ardMod.ino
src/: callbacks.c  genproto.sh  main.c  myf.c  myf.h  prototypes.h
srcutils/: #GtkApp.glade#  GtkApp.glade  rf.h
srcutils/img/: vista_lado1.xcf  vista_tras.xcf
